--- a/index.html
+++ b/index.html
@@ -3,27 +3,102 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name</title>
+    <title>Abderrazzaq MOUFIDI - CV</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to My Personal Website</h1>
+        <div class="profile-container">
+            <img src="me.jpg" alt="Abderrazzaq MOUFIDI" class="profile-photo">
+            <div class="intro">
+                <h1>Abderrazzaq MOUFIDI</h1>
+                <p>Ph.D. in Artificial Intelligence</p>
+                <p>University of Angers, France</p>
+                <p><a href="https://scholar.google.com/citations?hl=en&user=a6FhgPAAAAAJ" target="_blank">Google Scholar Profile</a></p>
+            </div>
+        </div>
     </header>
-    <section>
-        <h2>About Me</h2>
-        <p>This is where you can write about yourself.</p>
+
+    <nav>
+        <ul>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#publications">Publications</a></li>
+            <li><a href="#projects">Projects</a></li>
+	    <li><a href="#awards">Awards</a></li>
+            <li><a href="#interests">Interests</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
+    <section id="education">
+        <h2>Education</h2>
+        <div class="education-item">
+            <h3>University of Angers (UA) - Polytech Angers</h3>
+            <p>Ph.D. in Artificial Intelligence (2021 - 2024)</p>
+            <p>Thesis: Contributions to Machine Learning-Based Multimodal Integration</p>
+        </div>
+        <!-- Repeat for other educational institutions -->
     </section>
-    <section>
+
+    <section id="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>Python</li>
+            <li>C, C++</li>
+            <li>MATLAB</li>
+            <li>COMSOL Multiphysics</li>
+            <!-- Add more skills -->
+        </ul>
+    </section>
+
+    <section id="experience">
+        <h2>Experience</h2>
+        <div class="experience-item">
+            <h3>Assistant Teacher, ESAIP, Angers</h3>
+            <p>October 2022 - January 2023</p>
+            <p>Teaching Arithmetic courses to first-year Bachelor students</p>
+        </div>
+        <!-- Repeat for other experiences -->
+    </section>
+
+    <section id="publications">
+        <h2>Publications</h2>
+        <ul>
+            <li>Wavelet Scattering Transform Depth Benefit, IAPR Workshop (2022)</li>
+            <li>Attention-Based Fusion of Ultrashort Voice Utterances, Sensors (2023)</li>
+            <!-- Add more publications -->
+        </ul>
+    </section>
+
+    <section id="projects">
         <h2>Projects</h2>
-        <p>List your projects here.</p>
+        <div class="project-item">
+            <h3>Sparsity and Inverse Problems Project</h3>
+            <p>Recovering clean signal from a distorted one (magnitude saturation)</p>
+        </div>
+        <!-- Repeat for other projects -->
     </section>
-    <section>
+
+    <section id="interests">
+        <h2>Interests</h2>
+        <ul>
+            <li>Running</li>
+            <li>Chess</li>
+            <li>Tennis</li>
+            <li>Climbing</li>
+            <li>Technology</li>
+            <li>History</li>
+            <li>Travel</li>
+        </ul>
+    </section>
+
+    <footer id="contact">
         <h2>Contact</h2>
-        <p>Provide contact information here.</p>
-    </section>
-    <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
+        <p>Email: <a href="mailto:amoufidi97@gmail.com">amoufidi97@gmail.com</a></p>
     </footer>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
